Display the tv episodes in a grid

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+    <template id="episode-card">
+      <section>
+        <h3></h3>
+        <img />
+        <p data-season-episode-number></p>
+        <time></time>
+        <p data-episode-summary></p>
+      </section>
+    </template>
     <div id="root">
     </div>
 
