Add TVMaze attribution in footer Add a border to the episodes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         <p data-episode-summary></p>
       </section>
     </template>
+
     <div id="root">
     </div>
+
+    <footer>
+      Data courtesy of <a href="https://www.tvmaze.com" target="_blank">TVMaze.com</a>.
+      © TVMaze — used under their API licensing terms.
+    </footer>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
