made changes post pr review

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <footer>
     Data courtesy of <a href="https://www.tvmaze.com"
-      target="_blank">TVMaze.com</a>.
+      target="_blank" rel="noopener noreferrer">TVMaze.com</a>.
     © TVMaze — used under their API licensing terms.
   </footer>
 
