Implemented fetching tv shows asynchronously

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       </section>
     </template>
 
+    <div>
+      <p id="placeholder"></p>
+    </div>
+
     <div id="root"></div>
 
     <footer>
