--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <header>
       <div class="controls">
         <div class="selector-container">
+          <label for="show-selector">Select show:</label>
+          <select id="show-selector">
+          </select>
           <label for="episode-selector">Select episode:</label>
           <select id="episode-selector">
             <option value="">All episodes</option>
@@ -41,7 +44,7 @@
       <p id="placeholder"></p>
     </div>
 
-    <div id="root"></div>
+    <main id="root"></main>
 
     <footer>
       Data courtesy of <a href="https://www.tvmaze.com" target="_blank" rel="noopener noreferrer">TVMaze.com</a>. © TVMaze — used under their API licensing
