--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <div class="controls">
         <div class="selector-container">
           <label for="show-selector">Select show:</label>
-          <select id="show-selector">
-          </select>
+          <select id="show-selector"></select>
           <label for="episode-selector">Select episode:</label>
           <select id="episode-selector">
             <option value="">All episodes</option>
@@ -28,6 +27,19 @@
         </div>
       </div>
     </header>
+
+    <template id="tv-show-card">
+      <section>
+        <h3></h3>
+        <img width="210" height="118" />
+        <p data-tv-show-summary></p>
+        <p data-tv-show-genres></p>
+        <p data-tv-show-status></p>
+        <p data-tv-show-rating></p>
+        <time></time>
+        <a data-tv-show-link href="#" target="_blank" rel="noopener noreferrer">View on TVMaze</a>
+      </section>
+    </template>
 
     <template id="episode-card">
       <section>
