Define CSS rules for the TV show metadata Remove link attribution from the card

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <p data-tv-show-genres></p>
         <p data-tv-show-status></p>
         <p data-tv-show-rating></p>
-        <time></time>
-        <a data-tv-show-link href="#" target="_blank" rel="noopener noreferrer">View on TVMaze</a>
+        <time data-tv-show-runtime></time>
       </section>
     </template>
 
