Add a back button in navigation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <body>
     <header>
+      <button id="back-to-shows" hidden>← Back to shows</button>
+
       <div class="controls">
         <div class="selector-container">
           <label for="show-selector">Select show:</label>
